<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bloodlord.shubhank.stockmarketv2.StockActivity"
    tools:ignore="RtlHardcoded">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Title_text"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="monospace" />

        <AutoCompleteTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Company"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:textStyle="bold"
                android:width="400dp"
                tools:ignore="LabelFor" />

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout"
            android:layout_below="@+id/Company"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/clearButtonText"
                android:id="@+id/clearButton"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="clearStuff" />

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/quoteButtonText"
                android:id="@+id/quoteButton"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="getInfo" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/favoritesTextView"
            android:id="@+id/textView2"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:textColor="#030303"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="10dp"
            android:id="@+id/gridLayout2">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_refreshButtonText"
                android:id="@+id/autorefresh"
                android:layout_row="0"
                android:layout_column="0"
                android:checked="false"
                android:layout_rowSpan="2"
                android:onClick="startRepeatingTask"
                android:visibility="invisible"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RefreshButton"
                android:layout_row="0"
                android:layout_column="1"
                android:src="@drawable/ic_action_refresh"
                android:background="#fefdfd"
                android:onClick="Refresh_once"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

        </GridLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/faView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gridLayout2" />

</RelativeLayout>
